--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <h2> <span class="d">D</span><span class="r">R</span> <span class="phone">Phone</span> </h2>
         <p> PRODUCT MANAGEMENT SYSTEM </p>
         <img src="img/6.jpg">
+        <button onclick=" dark()" ondblclick="white()" class="moodd"> <h4 id="hh">White Mood</h4>  </button>
     </div>
 
     <div class="inputs">
